Fixed Layout issues

--- a/app/assets/stylesheets/beers.scss
+++ b/app/assets/stylesheets/beers.scss
@@ -4,37 +4,35 @@
 
 // variables
 
-$font-stack: Nanami-Bold, Nanami-Rounded-Bld, Helvetica, sans-serif;
+$font-stack: Nanami-Bold, Nanami-Rounded-Bld, Helvetica, sans-serif,;
 $primary-color: #000000;
-$bakground: #f8f8f8;
+$background: #fafafa;
 $font-light: Nanami-Light, Nanami-Rounded-Lt, Helvetica, sans-serif;
-$grid-columns: 12 !default;
+// $grid-columns: 12 !default;
+// $visual-grid: true !default;
+// $visual-grid-color: lighten(#FFF0E8, 3%);
+
 
 // global styles
 
 body {
   color: $primary-color;
-  background-color: $bakground;
+  background-color: $background;
 }
 
 // fonts
 
-@import url("//hello.myfonts.net/count/2d07a4");
+// @font-face {
+// 	font-family: 'Nanami-Rounded-Bld';
+// 	src: font-url('webfonts/2D07A4_3_0.eot');
+// 	src: font-url('webfonts/2D07A4_3_0.eot?#iefix') format('embedded-opentype'),url('webfonts/2D07A4_3_0.woff2') format('woff2'),url('webfonts/2D07A4_3_0.woff') format('woff'),url('webfonts/2D07A4_3_0.ttf') format('truetype');
+// }
 
-@font-face {
-	font-family: 'Nanami-Rounded-Bld';
-	src: font-url('webfonts/2D07A4_3_0.eot');
-	src: font-url('webfonts/2D07A4_3_0.eot?#iefix') format('embedded-opentype'),url('webfonts/2D07A4_3_0.woff2') format('woff2'),url('webfonts/2D07A4_3_0.woff') format('woff'),url('webfonts/2D07A4_3_0.ttf') format('truetype');
-}
-
-@font-face {
-	font-family: 'Nanami-Rounded-Lt';
-	src: font-url('webfonts/2D07A4_9_0.eot');
-	src: font-url('webfonts/2D07A4_9_0.eot?#iefix') format('embedded-opentype'),url('webfonts/2D07A4_9_0.woff2') format('woff2'),url('webfonts/2D07A4_9_0.woff') format('woff'),url('webfonts/2D07A4_9_0.ttf') format('truetype');
-}
-
-@import url("//hello.myfonts.net/count/2d1133");
-
+// @font-face {
+// 	font-family: 'Nanami-Rounded-Lt';
+// 	src: font-url('webfonts/2D07A4_9_0.eot');
+// 	src: font-url('webfonts/2D07A4_9_0.eot?#iefix') format('embedded-opentype'),url('webfonts/2D07A4_9_0.woff2') format('woff2'),url('webfonts/2D07A4_9_0.woff') format('woff'),url('webfonts/2D07A4_9_0.ttf') format('truetype');
+// }
   
 @font-face {font-family: 'Nanami-Bold';
 	src: font-url('webfonts/2D1133_1_0.eot');
@@ -57,6 +55,7 @@ body {
 
 .b1 {
 	font: 105% $font-stack, Nanami-Bold;
+	font-weight: 900;
 	display: inline;
 	letter-spacing: 2px;
 }
@@ -94,10 +93,11 @@ body {
 }
 
 .logo {
-	width: 60%;
+	width: 50%;
 	position: block;
-	margin-left: 20%;
-	margin-top: 20px;
+	margin-left: 25%;
+	margin-right: 25%;
+	margin-top: 25px;
 }
 
 .headlineone {
@@ -124,29 +124,29 @@ body {
 
 .wishlist {
 
-	@include outer-container(100%);
-	padding-top: 5px;
+	@include outer-container(80%);
+	padding: 10	px;
+	background-color: white;
 
-	td {
-		display: inline;
-		margin-left: 15px;
-		padding: 10px;
-		text-align: left;
+	table {
+
 	}
 
 	tr {
-		width: 33%;
+
 	}
 
+	td {
+		display: inline;
+		// margin-left: 15px;
+		padding: 10px;
+		// text-align: left;
+	}
 }
 
 .wishlist-content {
 	font: 100% $font-light;
 	width: 80%;
-	background-color: white;
-	padding: 10px;
-	margin-left: 10%;
-	margin-top: -10px;
 }
 
 .table-labels {
@@ -157,10 +157,12 @@ body {
 
 .reviewtable {
 	@include outer-container(80%);
+	// @include outer-container;
 
 	.review-container {
-		margin-top: 20px;
 		@include span-columns(4);
+		@include omega(3n);
+		margin-top: 20px;
 	}
 
 }
@@ -171,7 +173,7 @@ body {
 	font-size: 100%;
 	color: black;
 	background-color: white;
-	height: 400px;
+	height: 475px;
 	padding: 20px;
 }
 
